link HTML file with js

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./public/css/custom.css">
+    <title>Akan Name Generator</title>
 </head>
 <body>
-    
+    <div>
+        <p>
+            Description of Akan Names
+        </p>
+    </div>
+
+    <button onclick="main()">Click here to get your name</button>
+    <script src="./public/JS/main.js"> </script>
 </body>
 </html>
