--- a/index.html
+++ b/index.html
@@ -6,15 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/css/custom.css">
     <title>Akan Name Generator</title>
+
 </head>
 <body>
     <div>
-        <p>
-            Description of Akan Names
-        </p>
+        <p>Akan Name Generator</p>
+        <p> Do you want to know your Akan Name? With only your birth date and gender the Akan Names Generator script will tell you your Akan Name. </p>
+        
     </div>
 
-    <button onclick="main()">Click here to get your name</button>
-    <script src="./public/JS/main.js"> </script>
+    <form id="form">
+        <input type="date" name="birthday" id="birthday" required>
+       <select name="gender">
+            <option value="none" selected>Gender</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+            </select>
+            <button type="submit">Click here to get your Akan Name</button>
+    </form>
+
+    <script src="./public/JS/main.js">
+        var form = document.getElementById('form')
+
+        form.addEventListener('submit', function(event){
+            event.preventDefault();
+
+            var date = document.getElementById('date').value;
+            console.log("date");
+            var gender= document.getElementById('gender').value;
+            console.log("gender");
+        })
+
+    </script>
 </body>
 </html>
