--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div>
         <p>Akan Name Generator</p>
         <p> Do you want to know your Akan Name? With only your birth date and gender the Akan Names Generator script will tell you your Akan Name. </p>
-        
-    </div>
+        <p>Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
+            </div>
 
     <form id="form">
         <input type="date" name="birthday" id="birthday" required>
