update form function

--- a/index.html
+++ b/index.html
@@ -25,18 +25,6 @@
             <button type="submit">Click here to get your Akan Name</button>
     </form>
 
-    <script src="./public/JS/main.js">
-        var form = document.getElementById('form')
-
-        form.addEventListener('submit', function(event){
-            event.preventDefault();
-
-            var date = document.getElementById('date').value;
-            console.log("date");
-            var gender= document.getElementById('gender').value;
-            console.log("gender");
-        })
-
-    </script>
+    <script src="./public/JS/main.js"> </script>
 </body>
 </html>
