update html output message

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         </div>
     </form>
     </div>
+    <div>
+        <p id="akanNameMessage">
+            
+        </p>
+    </div>
 
     <script src="./public/JS/main.js"> </script>
 </body>
