--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <div>
         <h1>Akan Name Generator</h1>
-        <p> Do you want to know your Akan Name? With only your birth date and gender the Akan Names Generator script will tell you your Akan Name. </p>
         <p>Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
+        <p> Do you want to know your Akan Name? With only your birth date and gender the Akan Names Generator will tell you your Akan Name. </p>
+        
     </div>
 
     <div class="container">
