--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="./public/css/custom.css" rel="stylesheet"/>
+    <link href="/css/custom.css" rel="stylesheet"/>
     <title>Akan Name Generator</title>
 </head>
 
